ANTLR/src/Buff/Buff_1_1Parser.java
// Generated from ./Buff_1_1.g4 by ANTLR 4.9
package Buff;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class Buff_1_1Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NUMBERDCL=1, TEXTDCL=2, BOOLEAN=3, ENDF=4, PRINTDEBUG=5, ID=6, TEXTVAL=7, 
		NUMBERVAL=8, BOOLVAL=9, LPAREN=10, RPAREN=11, LCURLY=12, RCURLY=13, RETURN=14, 
		LOGAND=15, LOGOR=16, IF=17, LOGEQUALS=18, LOGNEQUALS=19, LOGLESS=20, LOGGREATER=21, 
		LOGLESSOREQUAL=22, LOGGREATEROREQUAL=23, NEGATE=24, POWER=25, COMMA=26, 
		ASSIGN=27, PLUS=28, MINUS=29, MULTIPLY=30, DIVIDE=31, SEMICOLON=32, WS=33, 
		NEWLINE=34;
	public static final int
		RULE_start = 0, RULE_prog = 1, RULE_dcl = 2, RULE_type = 3, RULE_dclParams = 4, 
		RULE_dclMoreParams = 5, RULE_dclParam = 6, RULE_stmts = 7, RULE_stmt = 8, 
		RULE_expr = 9, RULE_lgclExpr = 10, RULE_lgclExpr2 = 11, RULE_lgclExpr3 = 12, 
		RULE_mathExpr = 13, RULE_mathExpr2 = 14, RULE_mathExpr3 = 15, RULE_lgclExpr4 = 16, 
		RULE_val = 17, RULE_termVal = 18, RULE_funcCall = 19, RULE_stmtParams = 20, 
		RULE_exprMoreParams = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "prog", "dcl", "type", "dclParams", "dclMoreParams", "dclParam", 
			"stmts", "stmt", "expr", "lgclExpr", "lgclExpr2", "lgclExpr3", "mathExpr", 
			"mathExpr2", "mathExpr3", "lgclExpr4", "val", "termVal", "funcCall", 
			"stmtParams", "exprMoreParams"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'number'", "'text'", "'bool'", "'endf'", "'?'", null, null, null, 
			null, "'('", "')'", "'{'", "'}'", "'return'", "'&&'", "'||'", "'if'", 
			"'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'!'", "'^'", "','", "'='", 
			"'+'", "'-'", "'*'", "'/'", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "NUMBERDCL", "TEXTDCL", "BOOLEAN", "ENDF", "PRINTDEBUG", "ID", 
			"TEXTVAL", "NUMBERVAL", "BOOLVAL", "LPAREN", "RPAREN", "LCURLY", "RCURLY", 
			"RETURN", "LOGAND", "LOGOR", "IF", "LOGEQUALS", "LOGNEQUALS", "LOGLESS", 
			"LOGGREATER", "LOGLESSOREQUAL", "LOGGREATEROREQUAL", "NEGATE", "POWER", 
			"COMMA", "ASSIGN", "PLUS", "MINUS", "MULTIPLY", "DIVIDE", "SEMICOLON", 
			"WS", "NEWLINE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Buff_1_1.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Buff_1_1Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public ProgContext prog() {
			return getRuleContext(ProgContext.class,0);
		}
		public TerminalNode EOF() { return getToken(Buff_1_1Parser.EOF, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Buff_1_1Listener ) ((Buff_1_1Listener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Buff_1_1Listener ) ((Buff_1_1Listener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Buff_1_1Visitor ) return ((Buff_1_1Visitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			prog();
			setState(45);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgContext extends ParserRuleContext {
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
	 
		public ProgContext() { }
		public void copyFrom(ProgContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class StmtProgContext extends ProgContext {
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public ProgContext prog() {
			return getRuleContext(ProgContext.class,0);
		}
		public StmtProgContext(ProgContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Buff_1_1Listener ) ((Buff_1_1Listener)listener).enterStmtProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Buff_1_1Listener ) ((Buff_1_1Listener)listener).exitStmtProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Buff_1_1Visitor ) return ((Buff_1_1Visitor<? extends T>)visitor).visitStmtProg(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DclProgContext extends ProgContext {
		public DclContext dcl() {
			return getRuleContext(DclContext.class,0);
		}
		public ProgContext prog() {
			return getRuleContext(ProgContext.class,0);
		}
		public DclProgContext(ProgContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Buff_1_1Listener ) ((Buff_1_1Listener)listener).enterDclProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Buff_1_1Listener ) ((Buff_1_1Listener)listener).exitDclProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Buff_1_1Visitor ) return ((Buff_1_1Visitor<? extends T>)visitor).visitDclProg(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ProgEmptyContext extends ProgContext {
		public ProgEmptyContext(ProgContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Buff_1_1Listener ) ((Buff_1_1Listener)listener).enterProgEmpty(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Buff_1_1Listener ) ((Buff_1_1Listener)listener).exitProgEmpty(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Buff_1_1Visitor ) return ((Buff_1_1Visitor<? extends T>)visitor).visitProgEmpty(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_prog);
		try {
			setState(54);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUMBERDCL:
			case BOOLEAN:
				_localctx = new DclProgContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(47);
				dcl();
				setState(48);
				prog();
				}
				break;
			case ID:
			case NUMBERVAL:
			case BOOLVAL:
			case LPAREN:
			case NEGATE:
				_localctx = new StmtProgContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(50);
				stmt();
				setState(51);
				prog();
				}
				break;
			case EOF:
				_localctx = new ProgEmptyContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DclContext extends ParserRuleContext {
		public DclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dcl; }
	 
		public DclContext() { }
		public void copyFrom(DclContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MultiLineStmtContext extends DclContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(Buff_1_1Parser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(Buff_1_1Parser.LPAREN, 0); }
		public DclParamsContext dclParams() {
			return getRuleContext(DclParamsContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(Buff_1_1Parser.RPAREN, 0); }
		public TerminalNode ASSIGN() { return getToken(Buff_1_1Parser.ASSIGN, 0); }
		public TerminalNode LCURLY() { return getToken(Buff_1_1Parser.LCURLY, 0); }
		public StmtsContext stmts() {
			return getRuleContext(StmtsContext.class,0);
		}
		public TerminalNode RETURN() { return getToken(Buff_1_1Parser.RETURN, 0); }
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public TerminalNode RCURLY() { return getToken(Buff_1_1Parser.RCURLY, 0); }
		public TerminalNode ENDF() { return getToken(Buff_1_1Parser.ENDF, 0); }
		public MultiLineStmtContext(DclContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Buff_1_1Listener ) ((Buff_1_1Listener)listener).enterMultiLineStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Buff_1_1Listener ) ((Buff_1_1Listener)listener).exitMultiLineStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Buff_1_1Visitor ) return ((Buff_1_1Visitor<? extends T>)visitor).visitMultiLineStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class OneLineStmtContext extends DclContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(Buff_1_1Parser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(Buff_1_1Parser.LPAREN, 0); }
		public DclParamsContext dclParams() {
			return getRuleContext(DclParamsContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(Buff_1_1Parser.RPAREN, 0); }
		public TerminalNode ASSIGN() { return getToken(Buff_1_1Parser.ASSIGN, 0); }
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public OneLineStmtContext(DclContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Buff_1_1Listener ) ((Buff_1_1Listener)listener).enterOneLineStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Buff_1_1Listener ) ((Buff_1_1Listener)listener).exitOneLineStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Buff_1_1Visitor ) return ((Buff_1_1Visitor<? extends T>)visitor).visitOneLineStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DclContext dcl() throws RecognitionException {
		DclContext _localctx = new DclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_dcl);
		try {
			setState(77);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new OneLineStmtContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(56);
				type();
				setState(57);
				match(ID);
				setState(58);
				match(LPAREN);
				setState(59);
				dclParams();
				setState(60);
				match(RPAREN);
				setState(61);
				match(ASSIGN);
				setState(62);
				stmt();
				}
				break;
			case 2:
				_localctx = new MultiLineStmtContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(64);
				type();
				setState(65);
				match(ID);
				setState(66);
				match(LPAREN);
				setState(67);
				dclParams();
				setState(68);
				match(RPAREN);
				setState(69);
				match(ASSIGN);
				setState(70);
				match(LCURLY);
				setState(71);
				stmts();
				setState(72);
				match(RETURN);
				setState(73);
				stmt();
				setState(74);
				match(RCURLY);
				setState(75);
				match(ENDF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode NUMBERDCL() { return getToken(Buff_1_1Parser.NUMBERDCL, 0); }
		public TerminalNode BOOLEAN() { return getToken(Buff_1_1Parser.BOOLEAN, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Buff_1_1Listener ) ((Buff_1_1Listener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Buff_1_1Listener ) ((Buff_1_1Listener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Buff_1_1Visitor ) return ((Buff_1_1Visitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			_la = _input.LA(1);
			if ( !(_la==NUMBERDCL || _la==BOOLEAN) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DclParamsContext extends ParserRuleContext {
		public DclParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dclParams; }
	 
		public DclParamsContext() { }
		public void copyFrom(DclParamsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DclParamsEmptyContext extends DclParamsContext {
		public DclParamsEmptyContext(DclParamsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Buff_1_1Listener ) ((Buff_1_1Listener)listener).enterDclParamsEmpty(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Buff_1_1Listener ) ((Buff_1_1Listener)listener).exitDclParamsEmpty(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Buff_1_1Visitor ) return ((Buff_1_1Visitor<? extends T>)visitor).visitDclParamsEmpty(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DclParamscontainedContext extends DclParamsContext {
		public DclParamContext dclParam() {
			return getRuleContext(DclParamContext.class,0);
		}
		public DclMoreParamsContext dclMoreParams() {
			return getRuleContext(DclMoreParamsContext.class,0);
		}
		public DclParamscontainedContext(DclParamsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Buff_1_1Listener ) ((Buff_1_1Listener)listener).enterDclParamscontained(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Buff_1_1Listener ) ((Buff_1_1Listener)listener).exitDclParamscontained(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Buff_1_1Visitor ) return ((Buff_1_1Visitor<? extends T>)visitor).visitDclParamscontained(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DclParamsContext dclParams() throws RecognitionException {
		DclParamsContext _localctx = new DclParamsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_dclParams);
		try {
			setState(85);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUMBERDCL:
			case BOOLEAN:
				_localctx = new DclParamscontainedContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(81);
				dclParam();
				setState(82);
				dclMoreParams();
				}
				break;
			case RPAREN:
				_localctx = new DclParamsEmptyContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DclMoreParamsContext extends ParserRuleContext {
		public DclMoreParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dclMoreParams; }
	 
		public DclMoreParamsContext() { }
		public void copyFrom(DclMoreParamsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DclMoreParamscontainedContext extends DclMoreParamsContext {
		public TerminalNode COMMA() { return getToken(Buff_1_1Parser.COMMA, 0); }
		public DclParamContext dclParam() {
			return getRuleContext(DclParamContext.class,0);
		}
		public DclMoreParamsContext dclMoreParams() {
			return getRuleContext(DclMoreParamsContext.class,0);
		}
		public DclMoreParamscontainedContext(DclMoreParamsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Buff_1_1Listener ) ((Buff_1_1Listener)listener).enterDclMoreParamscontained(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Buff_1_1Listener ) ((Buff_1_1Listener)listener).exitDclMoreParamscontained(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Buff_1_1Visitor ) return ((Buff_1_1Visitor<? extends T>)visitor).visitDclMoreParamscontained(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DclMoreParamsEmptyContext extends DclMoreParamsContext {
		public DclMoreParamsEmptyContext(DclMoreParamsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Buff_1_1Listener ) ((Buff_1_1Listener)listener).enterDclMoreParamsEmpty(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Buff_1_1Listener ) ((Buff_1_1Listener)listener).exitDclMoreParamsEmpty(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Buff_1_1Visitor ) return ((Buff_1_1Visitor<? extends T>)visitor).visitDclMoreParamsEmpty(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DclMoreParamsContext dclMoreParams() throws RecognitionException {
		DclMoreParamsContext _localctx = new DclMoreParamsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_dclMoreParams);
		try {
			setState(92);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COMMA:
				_localctx = new DclMoreParamscontainedContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				match(COMMA);
				setState(88);
				dclParam();
				setState(89);
				dclMoreParams();
				}
				break;
			case RPAREN:
				_localctx = new DclMoreParamsEmptyContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DclParamContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(Buff_1_1Parser.ID, 0); }
		public DclParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dclParam; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Buff_1_1Listener ) ((Buff_1_1Listener)listener).enterDclParam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Buff_1_1Listener ) ((Buff_1_1Listener)listener).exitDclParam(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Buff_1_1Visitor ) return ((Buff_1_1Visitor<? extends T>)visitor).visitDclParam(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DclParamContext dclParam() throws RecognitionException {
		DclParamContext _localctx = new DclParamContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_dclParam);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			type();
			setState(95);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtsContext extends ParserRuleContext {
		public StmtsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmts; }
	 
		public StmtsContext() { }
		public void copyFrom(StmtsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class StmtsEmptyContext extends StmtsContext {
		public StmtsEmptyContext(StmtsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Buff_1_1Listener ) ((Buff_1_1Listener)listener).enterStmtsEmpty(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Buff_1_1Listener ) ((Buff_1_1Listener)listener).exitStmtsEmpty(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Buff_1_1Visitor ) return ((Buff_1_1Visitor<? extends T>)visitor).visitStmtsEmpty(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StmtsContainedContext extends StmtsContext {
		public TerminalNode IF() { return getToken(Buff_1_1Parser.IF, 0); }
		public TerminalNode LPAREN() { return getToken(Buff_1_1Parser.LPAREN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(Buff_1_1Parser.RPAREN, 0); }
		public TerminalNode RETURN() { return getToken(Buff_1_1Parser.RETURN, 0); }
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public StmtsContext stmts() {
			return getRuleContext(StmtsContext.class,0);
		}
		public StmtsContainedContext(StmtsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Buff_1_1Listener ) ((Buff_1_1Listener)listener).enterStmtsContained(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Buff_1_1Listener ) ((Buff_1_1Listener)listener).exitStmtsContained(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Buff_1_1Visitor ) return ((Buff_1_1Visitor<? extends T>)visitor).visitStmtsContained(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtsContext stmts() throws RecognitionException {
		StmtsContext _localctx = new StmtsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_stmts);
		try {
			setState(106);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IF:
				_localctx = new StmtsContainedContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(97);
				match(IF);
				setState(98);
				match(LPAREN);
				setState(99);
				expr();
				setState(100);
				match(RPAREN);
				setState(101);
				match(RETURN);
				setState(102);
				stmt();
				setState(103);
				stmts();
				}
				break;
			case RETURN:
				_localctx = new StmtsEmptyContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
